// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightInteractive renders correctly 1`] = `
<div>
  <style
    jsx={true}
  >
    
        min-height: 500px;
        height: 100%;
        border: 1px solid #e84439;
        
      
  </style>
</div>
`;

exports[`SpotlightInteractive renders the configured maxHeight 1`] = `
<div>
  <style
    jsx={true}
  >
    
        min-height: 500px;
        height: 100%;
        border: 1px solid #e84439;
        
            overflow: hidden;
            max-height: 400px
          
      
  </style>
</div>
`;

exports[`SpotlightInteractive renders the configured minHeight 1`] = `
<div>
  <style
    jsx={true}
  >
    
        min-height: 300px;
        height: 100%;
        border: 1px solid #e84439;
        
      
  </style>
</div>
`;
